--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.2",
     "morgan": "^1.9.0",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   },
   "bugs": {
     "url": "https://github.com/Hapseleg/SNYTPlusPlus/issues"
