--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.2",
     "morgan": "^1.9.0",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "request": "^2.83.0"
   },
   "bugs": {
     "url": "https://github.com/Hapseleg/SNYTPlusPlus/issues"
