--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.9.0",
     "pug": "^2.0.0-rc.4",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "supertest": "^3.0.0"
   },
   "bugs": {
     "url": "https://github.com/Hapseleg/SNYTPlusPlus/issues"
