--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pug": "^2.0.0-rc.4",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
+    "should": "^13.1.3",
     "supertest": "^3.0.0"
   },
   "bugs": {
