--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "should": "^13.1.3",
+    "sinon": "^4.1.2",
     "supertest": "^3.0.0"
   },
   "bugs": {
