--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.5",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "pug": "^2.0.0-rc.4",
     "q": "^1.5.1",
     "request": "^2.83.0",
